# diceMap

./: CMakeLists.txt  Point.h  README.md  main.cpp
lib/: rect.cpp
